# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: gendiff-linter.yml  gendiff-tests.yml
gendiff/: __init__.py  build_diff.py  cli.py  differ.py  formatter.py  parser.py
gendiff/formatters/: json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: compare_test.py  json_nested_test.py  json_plain_test.py  json_test.py  test_diff.py  yml_nested_test.py  yml_test.py
tests/fixtures/: file1.yml  result.txt
