[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "This is a package that compares two files"
authors = ["Enimalojd <enderston8@gmail.com>"]
readme = "README.md"
repository = "https://github.com/Enimalojd/python-project-50"
packages = [
  { include = "gendiff" },
]
classifiers = [
    "Topic :: Education",
]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
pyyaml = "^6.0.1"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
